<resources xmlns:xliff="http://schemas.android.com/tools">
    <!--Shared Preferences-->
    <string name="pref_previously_started">previouslyStarted</string>
    <string name="pref_persistent_storage">by.stylesoft.fastestpunch.PERSISTENT_STORAGE</string>
    <string name="accept_button_pushed">accept_button_pushed</string>
    <string name="punch_speed_result">punch_speed_result</string>
    <string name="reaction_speed_result">reaction_speed_result</string>
    <string name="acceleration_result">acceleration_result</string>

    <string name="pref_main_settings">by.stylesoft.fastestpunch.PREF_MAIN_SETTINGS</string>
    <string name="pref_main_setting_search">by.stylesoft.fastestpunch.PREF_MAIN_SETTINGS_SEARCH</string>
    <string name="hand_item">hand</string>
    <string name="hand_left_check_item">handLeftCheck</string>
    <string name="hand_right_check_item">handRightCheck</string>
    <string name="gloves_item">gloves</string>
    <string name="gloves_on_check_item">glovesOnCheck</string>
    <string name="gloves_off_check_item">glovesOffCheck</string>
    <string name="moves_item">moves</string>
    <string name="on_step_check_item">onStepCheck</string>
    <string name="with_space_check_item">withSpaceCheck</string>
    <string name="gloves_weight_item">glovesWeight</string>
    <string name="punch_type_item">punchType</string>

    <!--Overflow menus-->
    <string name="overflow">Overflow</string>
    <string name="average_value">Average value</string>
    <string name="change_name">Change name</string>
    <string name="leave_community">Leave community</string>

    <string name="punch_speed">Punch speed</string>
    <string name="reaction_speed">Reaction speed</string>
    <string name="acceleration">Accelerator</string>
    <string name="date">Date</string>

    <!--Main activity-->
    <string name="app_name">Fastest Punch</string>
    <string name="punch_button">Punch</string>
    <string name="community">Community</string>
    <string name="history">History</string>
    <string name="settings_description">Settings</string>
    <string name="copyright">Copyright</string>

    <!--Main settings-->
    <string name="left_hand_item">left</string>
    <string name="right_hand_item">right</string>
    <string name="gloves_on_item">gloves</string>
    <string name="gloves_off_item">no gloves</string>
    <string name="punch_on_step_item">on step</string>
    <string name="punch_with_space_item">with space</string>
    <string name="gloves_weight_text">Gloves weight</string>
    <string name="gloves_weight_unit">oz</string>
    <string name="punch_type_text">Punch type</string>
    <string-array name="punch_type_array">
        <item>jab</item>
        <item>cross</item>
        <item>hook</item>
        <item>uppercut</item>
        <item>overhand</item>
    </string-array>

    <!--Licence activity-->
    <string name="eula_title">License agreement</string>
    <string name="eula_text">There must be text of EULA.
        \nThere must be text of EULA.
        \n\nThere must be text of EULA.
    </string>
    <string name="eula_line_description">Line</string>
    <string name="accept_button_text">Accept</string>
    <!--<string name="accept_button_pushed">false</string>-->

    <!--Punch Button activity-->
    <string name="ok_button_text">OK</string>
    <string name="bad_seek_bar_text">bad</string>
    <string name="middle_seek_bar_text">middle</string>
    <string name="good_seek_bar_text">good</string>
    <string name="punch_speed_text">@string/punch_speed</string>
    <string name="punch_speed_dimen_text"><xliff:g>%.2f</xliff:g> m/s</string>
    <string name="reaction_speed_text">@string/reaction_speed</string>
    <string name="reaction_speed_dimen_text"><xliff:g>%.2f</xliff:g> s</string>
    <string name="acceleration_text">@string/acceleration</string>
    <string name="acceleration_dimen_text"><xliff:g>%.2f</xliff:g>
        m/s&lt;sup&gt;&lt;small&gt;&lt;small&gt;2&lt;/small&gt;&lt;/small&gt;&lt;/sup&gt;</string>

    <!--History-->
    <string name="history_label">@string/history</string>

    <!--Community-->
    <string name="community_label">Community</string>
</resources>
