<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_license"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="by.stylesoft.fastestpunch.LicenseActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eula_title"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"
        android:typeface="normal"
        android:fontFamily="sans-serif" />

    <View
        android:id="@+id/imageViewLine"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/eula_line_description" />
    <!--android:layerType="software"-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eula_text"/>

    <Button
        android:id="@+id/buttonAccept"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background_red"
        android:text="@string/accept_button_text"
        android:textColor="@color/colorTextWhite" />
    <!--style="@style/RedButtonTheme"-->

</LinearLayout>
