<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="by.stylesoft.fastestpunch.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/allSettings"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginEnd="4dp"
            android:id="@+id/punchType"
            android:background="@drawable/parameters_background"
            android:text="Hello World!" />

        <ImageButton
            android:layout_weight="1"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_marginStart="4dp"
            android:id="@+id/mainSettingsButton"
            android:onClick="startActivity"
            android:src="@mipmap/settings"
            android:background="@drawable/button_background"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/settings_description" />

    </LinearLayout>

    <Button
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:id="@+id/punchButton"
        android:text="@string/punch_button"
        android:layout_below="@+id/allSettings"
        android:background="@drawable/punch_button"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/punchButtonTextColor"
        android:textSize="@dimen/punch_button_text_size"
        android:typeface="normal"
        android:textStyle="bold"/>
    <!--android:gravity="center_vertical|center_horizontal"-->

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/communityButton"
            android:text="@string/community"
            android:background="@drawable/button_background"
            android:typeface="normal"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/historyButton"
            android:text="@string/history"
            android:background="@drawable/button_background"
            android:layout_marginTop="10dp"
            android:typeface="normal" />
    </LinearLayout>


</RelativeLayout>
