<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    style="@style/MainSettingsTheme"
    app:behavior_hideable="true"
    app:behavior_peekHeight="80dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <ImageButton
        android:id="@+id/menuTopButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/settings_description"
        android:background="@color/colorDefaultBackground"
        android:src="@drawable/ic_menu_arrow_bottom" />

    <TableLayout
        android:id="@+id/imageTable"
        android:layout_below="@id/menuTopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_item_whole_left_hand"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/whole_left_hand"/>

            <ImageView
                android:id="@+id/image_item_whole_right_hand"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/whole_right_hand"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_item_gloves_on"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/boxing"/>

            <ImageView
                android:id="@+id/image_item_gloves_off"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/whithout_gloves"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_item_on_step"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/gloves_not_chosed"/>

            <ImageView
                android:id="@+id/image_item_on_spot"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/gloves_not_chosed"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/glovesWeightForm"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/imageTable"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
        <!--android:visibility="invisible"-->

        <TextView
            android:id="@+id/glovesWeightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/gloves_weight_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/glovesWeight"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:cursorVisible="false"
            android:inputType="number"
            android:labelFor="@+id/glovesWeightText"
            tools:ignore="LabelFor"
            android:textAlignment="center"
            android:textSize="14sp"
            android:typeface="normal">
            <!--<requestFocus />-->
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/gloves_weight_unit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/punchTypeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/glovesWeightForm"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/punch_type_text" />
        <!-- <Spinner
             android:id="@+id/punchType"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:inputType="number"/>-->

    </LinearLayout>

</RelativeLayout>
